--- a/templates/comment_form.html
+++ b/templates/comment_form.html
@@ -13,9 +13,9 @@
         <label class="hand-cursor">
             {{ form.file(class="comment-file") }}
             <span class="fa fa-camera"></span>
-            <span class="photo_text hidden-xs">Image</span>
+            <span class="photo_text hidden-xs">Фото</span>
         </label>
-        <button type="submit" class="btn btn-motive">comment</button>
+        <button type="submit" class="btn btn-motive">ответить</button>
     </div>
 
     {% if form.errors %}
