--- a/templates/crop_image.html
+++ b/templates/crop_image.html
@@ -25,14 +25,14 @@
   <div class="row">
     <div class="col-sm-8 col-sm-offset-2">
     <div class="ct-sectionHeader ct-u-paddingBoth20">
-        <h2 class="ct-u-size34">Crop yor avatar</h2>
+        <h2 class="ct-u-size34">Создать миниатюру</h2>
      </div>
      <div>
          <img id="image" src="{{ url_for('uploaded_file',filename= user.avatar) }}" alt="Picture">
 
 
      </div>
-     <button type="button" id="button" class="btn btn-motive btn-form" >Crop</button>
+     <button type="button" id="button" class="btn btn-motive btn-form" >Обрезать</button>
      <div id="result"></div>
    </div>
   </div>
