--- a/templates/deleted_object.html
+++ b/templates/deleted_object.html
@@ -3,9 +3,9 @@
 <section class="ct-errorText text-center text-uppercase ct-u-paddingBottom100">
     <div class="container">
         <h1>404</h1>
-        <p class="ct-u-size34 ct-u-paddingTop20 ct-u-paddingBottom40">{{ object }} has been deleted</p>
+        <p class="ct-u-size34 ct-u-paddingTop20 ct-u-paddingBottom40">{{ object }} не существует или был удален</p>
        <a href="{{ url_for('index') }}" class="btn btn-motive">
-           <span>go back to homepage  <i class="fa fa-location-arrow"> </i></span>
+           <span>Назад на главную станицу  <i class="fa fa-location-arrow"> </i></span>
        </a>
     </div>
 </section>
