--- a/templates/edit_post.html
+++ b/templates/edit_post.html
@@ -7,7 +7,7 @@
     <section class="ct-u-paddingBoth30">
         <div class="container">
             <div class="ct-sectionHeader ct-u-paddingBoth20">
-                <h2 class="ct-u-size34">add product</h2>
+                <h2 class="ct-u-size34">Редактировать пост</h2>
             </div>
             <div class="row">
                 <div class="col-xs-offset-1 col-xs-10 col-md-offset-2 col-md-8">
@@ -22,14 +22,14 @@
 
                                 <label for="file" class="hand-cursor">
                                     <span class="photo_text hidden-xs ct-u-size24"><i class="fa fa-camera ct-u-size30"
-                                                                                      aria-hidden="true"></i> Select image</span>
+                                                                                      aria-hidden="true"></i> Выбрать изображение</span>
                                 </label>
                             </div>
 
                         </div>
                         <div class="control-group">
                             <div class="controls">
-                                <button type="submit" class="btn btn-motive btn-form">Publish</button>
+                                <button type="submit" class="btn btn-motive btn-form">Опубликовать</button>
                             </div>
                         </div>
                     </form>
