--- a/templates/user_container/user_contain_prod_comment.html
+++ b/templates/user_container/user_contain_prod_comment.html
@@ -8,7 +8,7 @@
             <li role="presentation" class="active comment_block" id="date" rel_obj="prod_comment"  user="{{ user_id }}">
                 <div class="ct-tabBorder">
 
-                    <a href=""  role="tab" data-toggle="tab">latest</a>
+                    <a href=""  role="tab" data-toggle="tab">последние</a>
                 </div>
                 <div class="mini-triangle">
 
@@ -18,7 +18,7 @@
                 <div class="ct-tabBorder">
 
 
-                    <a href=""  role="tab" data-toggle="tab">popular</a>
+                    <a href=""  role="tab" data-toggle="tab">популярные</a>
                 </div>
                 <div class="mini-triangle">
 
@@ -31,14 +31,14 @@
 
     {% for comment in comments %}
         {% if comment.deleted == False %}
-            Comment for product <a href="{{url_for('singleproduct', product_id = comment.product_id )}}">{{comment.product.title}}</a>
+            Комментарий к продукту <a href="{{url_for('singleproduct', product_id = comment.product_id )}}">{{comment.product.title}}</a>
             {{ product_comment_macro(comment, comments_relationships) }}
         {% endif %}
     {% endfor %}
 {% else %}
-    <p>You have not comments yet</p>
-    <p>Could you read something?</p>
-    <a href="{{url_for('last_posts')}}">Read latest</a>
+    <p>Вы еще ничего не прокомметировали</p>
+    <p>Хотите что-нибудь <a href="{{url_for('popular_product')}}">почитать</a>?</p>
+
 {% endif %}
 
 <script>
