--- a/templates/404.html
+++ b/templates/404.html
@@ -4,9 +4,9 @@
 <section class="ct-errorText text-center text-uppercase  ct-u-paddingTop0 ct-u-paddingBottom100">
     <div class="container">
         <h1>404</h1>
-        <p class="ct-u-size34 ct-u-paddingTop20 ct-u-paddingBottom40">This page could not be found</p>
+        <p class="ct-u-size34 ct-u-paddingTop20 ct-u-paddingBottom40">Страница не найден</p>
        <a href="{{ url_for('index') }}" class="btn btn-motive">
-           <span>go back to homepage  <i class="fa fa-location-arrow"> </i></span>
+           <span>назад на главную страницу  <i class="fa fa-location-arrow"> </i></span>
        </a>
     </div>
 </section>
