--- a/templates/add_post.html
+++ b/templates/add_post.html
@@ -7,7 +7,7 @@
     <section class="ct-u-paddingBoth40">
         <div class="container">
             <div class="ct-sectionHeader ct-u-paddingBoth20">
-                <h2 class="ct-u-size34">add post</h2>
+                <h2 class="ct-u-size34">Создать пост</h2>
             </div>
             <div class="row">
                 <div class="col-xs-offset-1 col-xs-10 col-md-offset-2 col-md-8">
@@ -27,7 +27,7 @@
                         </div>
                         <div class="control-group">
                             <div class="controls">
-                                <button type="submit" class="btn btn-motive btn-form">Publish</button>
+                                <button type="submit" class="btn btn-motive btn-form">Опубликовать</button>
                             </div>
                         </div>
                     </form>
