--- a/templates/confirm_email.html
+++ b/templates/confirm_email.html
@@ -5,7 +5,8 @@
     <div class="container">
 
         <p class="ct-u-size28 ct-u-paddingTop20 ct-u-paddingBottom40">
-            Please go to your email and click confirmation link to finish registration
+            На ваш Е-mail было отправилено письмо с потверждением.
+            Пожалуйста, кликнете на ссылку в письме, что-бы завершить регистрацию
         </p>
 
     </div>
