--- a/templates/edit_product.html
+++ b/templates/edit_product.html
@@ -7,7 +7,7 @@
     <section class="ct-u-paddingBo40">
         <div class="container">
             <div class="ct-sectionHeader ct-u-paddingBoth20">
-                <h2 class="ct-u-size34">add product</h2>
+                <h2 class="ct-u-size34">Редактировать продукт</h2>
             </div>
             <div class="row">
                 <div class="col-xs-offset-1 col-xs-10 col-md-offset-2 col-md-8">
@@ -19,17 +19,17 @@
                             {{ render_field_with_errors(form.price, class="form-control") }}
                             {{ render_field_with_errors(form.description, class="form-control") }}
                             <div id="hide" class="form-group big-form-file">
-                                {{ form.images(id="file", class="inputfile", data_multiple_caption="{count} files selected", multiple="") }}
+                                {{ form.images(id="file", class="inputfile", data_multiple_caption="{count} файла выбрано", multiple="") }}
 
                                 <label for="file" class="hand-cursor">
                                     <span class="photo_text hidden-xs ct-u-size24"><i class="fa fa-camera ct-u-size30"
-                                                                                      aria-hidden="true"></i> Select images</span>
+                                                                                      aria-hidden="true"></i> Выбрать фото</span>
                                 </label>
                             </div>
                         </div>
                         <div class="control-group">
                             <div class="controls">
-                                <button type="submit" class="btn btn-motive btn-form">Publish</button>
+                                <button type="submit" class="btn btn-motive btn-form">Опубликовать</button>
                             </div>
                         </div>
                     </form>
