--- a/templates/security/register_user.html
+++ b/templates/security/register_user.html
@@ -7,7 +7,7 @@
  <section class="ct-u-paddingBottom80">
 <div class="container">
     <div class="ct-sectionHeader ct-u-paddingBottom20">
-        <h2>register</h2>
+        <h2>Регистрация</h2>
     </div>
     <div class="row">
         <div class="col-xs-offset-1 col-xs-10">
@@ -25,7 +25,7 @@
   {% if register_user_form.password_confirm %}
     {{ render_field_with_errors(register_user_form.password_confirm,  class="form-control") }}
   {% endif %}
-  {{ render_field(register_user_form.submit,  class="btn btn-motive btn-form", value="register") }}
+  {{ render_field(register_user_form.submit,  class="btn btn-motive btn-form", value="зарегистрироваться") }}
 </div>
 </form>
 
