--- a/templates/single_post.html
+++ b/templates/single_post.html
@@ -15,12 +15,12 @@
 
                         <div class="edit-post-block dropdown ct-u-paddingTop5 text-center ct-u-size22">
 
-                            <i class="fa fa-pencil-square-o dropdown-toggle ct-u-cursor-pointer" aria-hidden="true"  data-toggle="dropdown">edit</i>
+                            <i class="fa fa-pencil-square-o dropdown-toggle ct-u-cursor-pointer" aria-hidden="true"  data-toggle="dropdown">редактировать</i>
                             <ul class="dropdown-menu" role="menu">
                                 <li><a href="{{ url_for('edit_post', id=post.id  ) }}">
-                                    <i class="fa fa-pencil-square-o" aria-hidden="true"></i> edit</a></li>
+                                    <i class="fa fa-pencil-square-o" aria-hidden="true"></i> редактировать</a></li>
                                 <li><a href="#" onclick="delete_post({{ post.id }}, event);">
-                                    <i class="fa fa-trash-o" aria-hidden="true"></i>delete</a></li>
+                                    <i class="fa fa-trash-o" aria-hidden="true"></i>удалить</a></li>
 
                               </ul>
 
@@ -38,9 +38,9 @@
                             <img src="{{ url_for('uploaded_file',filename=post.image) }}" class="single-post-image" />
                         {% endif %}
                         <p class="ct-u-motiveLight">
-                            By
+
                             <a href="{{ url_for('user', username =post_author.username ) }}">{{ post_author.username }}</a>
-                            on
+
                             {{ post.published_at|datetime }}
 
                         </p>
@@ -93,7 +93,7 @@
 
                                     {% endif %}
                                 </li>
-                                <li><h4>like</h4></li>
+
                             </ul>
                         </div>
 
@@ -104,7 +104,7 @@
                                     <li>
                                         <i class="fa fa-comments-o" aria-hidden="true"></i>
                                     </li>
-                                    <li><h4  title="buzz hover text">comment</h4 ></li>
+                                    <li><h4  title="комментировать пост">комментировать</h4 ></li>
                                 </ul>
                             </div>
                         {% else %}
@@ -113,7 +113,7 @@
                                     <li>
                                         <i class="fa fa-comments-o" aria-hidden="true"></i>
                                     </li>
-                                    <li><h4  title="buzz hover text">comment</h4 ></li>
+                                    <li><h4  title="комментировать пост">комментировать</h4 ></li>
                                 </ul>
                             </div>
                         {% endif %}
@@ -122,16 +122,16 @@
                                 <li>
                                     {% if current_user.is_authenticated %}
                                         {% if if_favorite %}
-                                            <i class="fa fa-star favourite post-fav" id="{{post.id}}" aria-hidden="true"></i>
+                                            <i class="fa fa-star favourite post-fav" id="{{post.id}}" aria-hidden="true" title="Убрать с избранного"></i>
                                         {% else%}
-                                            <i class="fa fa-star-o not-favourite post-fav" id="{{post.id}}" aria-hidden="true"></i>
+                                            <i class="fa fa-star-o not-favourite post-fav" id="{{post.id}}" aria-hidden="true" title="Добавить в избранное"></i>
                                         {% endif %}
                                     {% else %}
                                         <i class="fa fa-star-o favourite-not-login" id="{{post.id}}" aria-hidden="true"></i>
 
                                     {% endif %}
                                 </li>
-                                <li><h4>Add to fav</h4></li>
+
                             </ul>
                         </div>
                     </div>
@@ -149,9 +149,9 @@
                             <label class="hand-cursor">
                                      {{ form.file(class="comment-file") }}
                                 <span class="fa fa-camera"></span>
-                                <span class="photo_text hidden-xs">Image</span>
+                                <span class="photo_text hidden-xs">Фото</span>
                             </label>
-                            <button type="submit" class="btn btn-motive">comment</button>
+                            <button type="submit" class="btn btn-motive">добавить</button>
 
 
 
@@ -171,7 +171,7 @@
                     </form>
                 </div>
                 <div class="ct-u-paddingBoth10">
-                    <h3 class="text-uppercase ct-u-size30 text-center">Comments</h3>
+                    <h3 class="text-uppercase ct-u-size30 text-center">Комментарии</h3>
 
                     {% if comments|length >= 1 %}
 
@@ -183,7 +183,7 @@
 
                                 <li role="presentation" class="">
                                     <div class="ct-tabBorder">
-                                        <a href="" onclick="post_comment({{ post.id }}, 'data', event);" role="tab" data-toggle="tab">Latest</a>
+                                        <a href="" onclick="post_comment({{ post.id }}, 'data', event);" role="tab" data-toggle="tab">Новые</a>
                                     </div>
                                     <div class="mini-triangle">
 
@@ -191,7 +191,7 @@
                                 </li>
                                  <li role="presentation" class="">
                                     <div class="ct-tabBorder">
-                                        <a href="" onclick="post_comment({{ post.id }}, 'rating', event);" role="tab" data-toggle="tab">Popular</a>
+                                        <a href="" onclick="post_comment({{ post.id }}, 'rating', event);" role="tab" data-toggle="tab">Популярные</a>
                                     </div>
                                     <div class="mini-triangle">
 
@@ -212,7 +212,7 @@
                                             {% for comment in comments %}
                                                 {% if comment.id == key %}
                                                         {% if comment.deleted %}
-                                                            comment has been deleted
+                                                            Комментарий был удален
                                                         {%else%}
                                                             <li class="ct-u-borderBottomGrayLighter ct-u-marginTop5 ct-u-paddingBoth10">{{ post_comment_macro(comment, comments_relationships) }}</li>
 
@@ -236,7 +236,7 @@
                                 <div class="ct-u-paddingBoth30" id="comments">
 
 
-                        <p>There is no comments for this post. Could yo be first?</p>
+                        <p>К этому посту еще нет комментариев. Хотите быть первым?</p>
 
 
 
@@ -254,7 +254,7 @@
                                 <div class="panel-heading">
                                   <div class="panel-title">
                                     <a class="collapsed" href="{{url_for('add_post')}}">
-                                        new post
+                                        создать пост
                                        <div class="plus ct-Diamond ct-Diamond--motive"></div>
                                     </a>
                                   </div>
@@ -264,7 +264,7 @@
                             <div class="panel-heading">
                               <div class="panel-title">
                                 <a class="collapsed" href="{{url_for('add_product')}}">
-                                    new product
+                                    добавить продукт
                                    <div class="plus ct-Diamond ct-Diamond--motive"></div>
                                 </a>
                               </div>
@@ -273,7 +273,7 @@
                     </div>
                     </div>
 
-                    <h4 class="text-uppercase ct-fw-600 ct-u-paddingBottom15 ct-u-borderBottomGrayLighter">Recent Posts</h4>
+                    <h4 class="text-uppercase ct-fw-600 ct-u-paddingBottom15 ct-u-borderBottomGrayLighter">Последние посты</h4>
                     <ul class="ct-mediaList list-unstyled ct-u-paddingTop10 ct-u-paddingBottom40">
 
                         {% for post in posts %}
@@ -302,10 +302,10 @@
 
 
                 </ul>
-                <h4 class="text-uppercase ct-fw-600 ct-u-paddingBottom15 ct-u-borderBottomGrayLighter">Latest Comments</h4>
+                <h4 class="text-uppercase ct-fw-600 ct-u-paddingBottom15 ct-u-borderBottomGrayLighter">Новые комментарии</h4>
                 <ul class="ct-simpleList list-unstyled ct-u-paddingTop10 ct-u-paddingBottom40">
-                    {% for comment in post.comments  %}
-                    <li><i class="fa fa-chevron-right"></i>{{ comment.com_author.username }} on <a href="#"><span>{{ comment.post.title }}</span></a></li>
+                    {% for comment in comments  %}
+                    <li><i class="fa fa-chevron-right"></i>{{ comments_relationships[comment.id]["author"].username }} в <a href="#"><span>{{ post.title }}</span></a></li>
                     {% endfor %}
                 </ul>
                 </div>
