--- a/templates/single_product.html
+++ b/templates/single_product.html
@@ -2,6 +2,9 @@
 {% from 'helpers.html' import popup_div_macro with context %}
 {% from 'helpers.html' import product_comment_macro with context %}
 
+{% block title %}Продукт{% endblock %}
+
+
 {% block body %}
     <section class="ct-u-paddingBottom10">
         <div class="container">
@@ -14,12 +17,12 @@
 
                         <div class="edit-product-block text-center dropdown ct-u-paddingTop5 ct-u-size22">
 
-                            <i class="fa fa-pencil-square-o  dropdown-toggle ct-u-cursor-pointer" aria-hidden="true"  data-toggle="dropdown">edit</i>
+                            <i class="fa fa-pencil-square-o  dropdown-toggle ct-u-cursor-pointer" aria-hidden="true"  data-toggle="dropdown">редактировать</i>
                             <ul class="dropdown-menu" role="menu">
                                 <li><a href="{{ url_for('edit_product', id=product.id  ) }}">
-                                    <i class="fa fa-pencil-square-o" aria-hidden="true"></i> edit</a></li>
+                                    <i class="fa fa-pencil-square-o" aria-hidden="true"></i> редактировать</a></li>
                                 <li><a href="#" onclick="delete_product({{ product.id }}, event);">
-                                    <i class="fa fa-trash-o" aria-hidden="true"></i>delete</a></li>
+                                    <i class="fa fa-trash-o" aria-hidden="true"></i>удалить</a></li>
 
                               </ul>
 
@@ -43,15 +46,15 @@
 
 
                         <p class="ct-u-motiveLight">
-                            By
+
                             <a href="{{ url_for('user', username =product_author.username ) }}">{{ product_author.username }}</a>
-                            on
+
                             {{ product.published_at|datetime }}
 
 
                         </p>
                         <p class=".ct-u-motiveLight">
-                            Price -  <span class="ct-u-size20">{{ product.price }}</span>
+                            Цена -  <span class="ct-u-size20">{{ product.price }}</span>
                         </p>
                         <p>
                             {{ product.description }}
@@ -104,7 +107,6 @@
 
                                     {% endif %}
                                 </li>
-                                <li><h4>like</h4></li>
                             </ul>
                         </div>
 
@@ -115,7 +117,7 @@
                                     <li>
                                         <i class="fa fa-comments-o" aria-hidden="true"></i>
                                     </li>
-                                    <li><h4  title="buzz hover text">comment</h4 ></li>
+                                    <li><h4  title="прокомментировать продукт">комментировать</h4 ></li>
                                 </ul>
                             </div>
 
@@ -125,7 +127,7 @@
                                     <li>
                                         <i class="fa fa-comments-o" aria-hidden="true"></i>
                                     </li>
-                                    <li><h4  title="buzz hover text">comment</h4 ></li>
+                                    <li><h4  title="прокомментировать продукт">комментировать</h4 ></li>
                                 </ul>
                             </div>
                         {% endif %}
@@ -136,16 +138,16 @@
                                     {% if current_user.is_authenticated %}
 
                                         {% if if_favorite %}
-                                            <i class="fa fa-star favourite product-fav" id="{{product.id}}" aria-hidden="true"></i>
+                                            <i class="fa fa-star favourite product-fav" id="{{product.id}}" aria-hidden="true" title="Убрать с избранного"></i>
                                         {% else%}
-                                            <i class="fa fa-star-o not-favourite product-fav" id="{{product.id}}" aria-hidden="true"></i>
+                                            <i class="fa fa-star-o not-favourite product-fav" id="{{product.id}}" aria-hidden="true" title="Добавить в избранное"></i>
                                         {% endif %}
                                     {% else %}
                                         <i class="fa fa-star-o favourite-not-login" aria-hidden="true"></i>
 
                                     {% endif %}
                                 </li>
-                                <li><h4>Add to fav</h4></li>
+
                             </ul>
                         </div>
                     </div>
@@ -163,9 +165,9 @@
                             <label class="hand-cursor">
                                 {{ form.file(class="comment-file") }}
                                 <span class="fa fa-camera"></span>
-                                <span class="photo_text hidden-xs">Image</span>
+                                <span class="photo_text hidden-xs">Фото</span>
                             </label>
-                            <button type="submit" class="btn btn-motive">comment</button>
+                            <button type="submit" class="btn btn-motive">добавить</button>
 
 
 
@@ -185,7 +187,7 @@
                     </form>
                 </div>
                 <div class="ct-u-paddingBoth10">
-                    <h3 class="text-uppercase ct-u-size30 text-center">Comments</h3>
+                    <h3 class="text-uppercase ct-u-size30 text-center">Комментарии </h3>
                         {% if comments|length >= 1 %}
 
                             <div class="ct-tabHeader ct-tabHeader--motive" role="tabpanel">
@@ -195,7 +197,7 @@
 
                                     <li role="presentation" class="">
                                         <div class="ct-tabBorder">
-                                            <a href="" onclick="product_comment({{ product.id }}, 'data', event);" role="tab" data-toggle="tab">Latest</a>
+                                            <a href="" onclick="product_comment({{ product.id }}, 'data', event);" role="tab" data-toggle="tab">Новые</a>
                                         </div>
                                         <div class="mini-triangle">
 
@@ -203,7 +205,7 @@
                                     </li>
                                      <li role="presentation" class="">
                                         <div class="ct-tabBorder">
-                                            <a href="" onclick="product_comment({{ product.id }}, 'rating', event);" role="tab" data-toggle="tab">Popular</a>
+                                            <a href="" onclick="product_comment({{ product.id }}, 'rating', event);" role="tab" data-toggle="tab">Популярные</a>
                                         </div>
                                         <div class="mini-triangle">
 
@@ -224,7 +226,7 @@
                                                 {% for comment in comments %}
                                                     {% if comment.id == key %}
                                                             {% if comment.deleted %}
-                                                                comment has been deleted
+                                                                Комментарий был удален
 
                                                             {%else%}
                                                                 <li class="ct-u-borderBottomGrayLighter ct-u-marginTop5 ct-u-paddingBoth10">{{ product_comment_macro(comment, comments_relationships) }}</li>
@@ -249,7 +251,7 @@
                                     <div class="ct-u-paddingBoth30" id="comments">
 
 
-                                            <p>There is no comments for this post. Could yo be first?</p>
+                                            <p>К этому посту еще нет комментариев? Хочешь быть первым?</p>
 
 
                                     </div>
@@ -268,7 +270,7 @@
                                 <div class="panel-heading">
                                   <div class="panel-title">
                                     <a class="collapsed" href="{{url_for('add_post')}}">
-                                        new post
+                                        создать пост
                                        <div class="plus ct-Diamond ct-Diamond--motive"></div>
                                     </a>
                                   </div>
@@ -278,7 +280,7 @@
                             <div class="panel-heading">
                               <div class="panel-title">
                                 <a class="collapsed" href="{{url_for('add_product')}}">
-                                    new product
+                                    добавить продукт
                                    <div class="plus ct-Diamond ct-Diamond--motive"></div>
                                 </a>
                               </div>
@@ -287,7 +289,7 @@
                     </div>
                     </div>
 
-                    <h4 class="text-uppercase ct-fw-600 ct-u-paddingBottom15 ct-u-borderBottomGrayLighter">Recent products</h4>
+                    <h4 class="text-uppercase ct-fw-600 ct-u-paddingBottom15 ct-u-borderBottomGrayLighter">Новые продукты</h4>
                     <ul class="ct-mediaList list-unstyled ct-u-paddingTop10 ct-u-paddingBottom40">
 
                         {% for product in products %}
